--- a/home.html
+++ b/home.html
@@ -140,6 +140,28 @@
       <div class="close"></div>
     </div>
   </div>
+   <br>
+  <br>
+  <br>
+  <br>
+  <section>
+    <h2 class="sale">SALE</h2>
+    <ul class="pics">
+        <div class="row">
+  <div class="column">
+    <img src="9GV70x1051722-0-global.jpg.avif" alt="lips" style="width:60%">
+    <p class="price"><span class="old">£̶7̶<br></span>£4</p>
+  </div>
+  <div class="column">
+    <img src="61K6cQhw4EL.jpg" alt="lash" style="width:60%">
+    <P class="price"><span class="old">£̶5̶<br></span>£3</P>
+  </div>
+  <div class="column">
+    <img src="71f8b329581e1285d91beb4d4d3155ab28a768b0.webp" alt="face" style="width:60%">
+    <P class="price"><span class="old">£̶1̶0̶<br></span>£7</P>
+  </div>
+</div>
+  </section>
 </body>
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
   integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
