--- a/catalogue.html
+++ b/catalogue.html
@@ -47,10 +47,10 @@
             <a class="nav-link" href="catalogue.html">Catalogue</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About us</a>
+            <a class="nav-link" href="about-us-page2.html">About us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -92,19 +92,19 @@
               <li>
                 <button class="btn btn-info" type="button" data-bs-toggle="collapse" data-bs-target="#cream1_data"
                   aria-expanded="false" aria-controls="#cream1_data" id="cream1_button">
-                  Cream 1
+                  Radiant Goddess
                 </button>
               </li>
               <li>
                 <button class="btn btn-info" type="button" data-bs-toggle="collapse" data-bs-target="#cream1_data"
                   aria-expanded="false" aria-controls="#cream1_data" id="cream2_button">
-                  Cream 2
+                  Timeless Youth
                 </button>
               </li>
               <li>
                 <button class="btn btn-info" type="button" data-bs-toggle="collapse" data-bs-target="#cream1_data"
                   aria-expanded="false" aria-controls="#cream1_data" id="cream3_button">
-                  Cream 3
+                  Soothing Calm
                 </button>
               </li>
             </ul>
@@ -124,13 +124,13 @@
               <li>
                 <button class="btn btn-info" type="button" data-bs-toggle="collapse" data-bs-target="#cream1_data"
                   aria-expanded="false" aria-controls="#cream1_data" id="bodycream1_button">
-                  Body lotion
+                  Silky Smooth
                 </button>
               </li>
               <li>
                 <button class="btn btn-info" type="button" data-bs-toggle="collapse" data-bs-target="#cream1_data"
                   aria-expanded="false" aria-controls="#cream1_data" id="bodycream2_button">
-                  Shower scrub
+                  Exfoliating Bliss
                 </button>
               </li>
             </ul>
@@ -150,18 +150,18 @@
               <li>
                 <button class="btn btn-info" type="button" data-bs-toggle="collapse" data-bs-target="#cream1_data"
                   aria-expanded="false" aria-controls="#cream1_data" id="hairshampoo_button">
-                  Hair Shampoo
+                  Golden Nourish
                 </button>
               </li>
               <li><button class="btn btn-info" type="button" data-bs-toggle="collapse" data-bs-target="#cream1_data"
                   aria-expanded="false" aria-controls="#cream1_data" id="hairconditioner_button">
-                  Hair Conditioner
+                  Magical Repair
                 </button>
               </li>
               <li>
                 <button class="btn btn-info" type="button" data-bs-toggle="collapse" data-bs-target="#cream1_data"
                   aria-expanded="false" aria-controls="#cream1_data" id="hairmask_button">
-                  Hair Mask
+                  Botanical
                 </button>
               </li>
             </ul>
@@ -181,25 +181,38 @@
             </strong><br /><br />
             <span id="info_box_description">
               description
-            </span><br /><br />
+            </span><br><br>
             <span id="info_box_ingredients">
               ingredients
-            </span>
+            </span><br>
+            <div id="divadd">
+              <button class="btn btn-info nav-but" id="additembtn">
+                <span id="plus">+</span><i class="bi bi-cart" id="add2cart"></i>
+              </button>
+            </div>
+            <div class="toast-container position-fixed bottom-0 end-0 p-3">
+              <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-body">
+                  <i class="bi bi-check-circle" id="check-icon"></i><span class="popuptext" id="cartmessage">Item added
+                    to cart! :)
+                  </span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- My JSS -->
-  <script src="catalogue-script.js"></script>
-  <!-- Bootstrap JSS -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-    integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-    crossorigin="anonymous"></script>
+    <!-- Bootstrap JSS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+      integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+      crossorigin="anonymous"></script>
+    <!-- My JSS -->
+    <script src="catalogue-script.js"></script>
 </body>
 
 </html>
